--- a/styles/summary.css
+++ b/styles/summary.css
@@ -329,6 +329,7 @@ body{
     font-style: normal;
     font-weight: 700;
     line-height: 25.2px;
+    white-space: nowrap;
   }
   
   .fram-68 p {
@@ -464,8 +465,8 @@ body{
 
   .footer-text{
       width: unset;
-
   }
+
   }
 
   @media (max-width: 1110px) {
@@ -511,13 +512,13 @@ body{
 }
 }
   
-  @media (max-width: 900px) {
+  @media (max-width: 910px) {
 
     .frame-40{
       gap: 16px;
       flex-direction: column;
       align-items: flex-start;
-      width: 100%;
+      width: 396px;
       height: 104px;
       padding: 0 16px;
       box-sizing: border-box;
@@ -633,10 +634,12 @@ body{
       margin-bottom: 18px;
       width: 100%;
       cursor: pointer;
-      
     }
 
+
+
     .urgency-summary-v1:hover {
+      width: 100%;
       height: 110px;
       box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.815);
     }
@@ -771,10 +774,6 @@ body{
       text-align: center;
     }
 
-    .frame-68{
-      width: 135px;
-    }
-
     .frame-68 span{
       font-family: Inter;
       font-size: 16px;
@@ -790,7 +789,7 @@ body{
       font-weight: 400;
       line-height: 17px;
       letter-spacing: 0em;
-      text-align: left;      
+      text-align: left;   
     }
 
     .frame-62 span{
@@ -829,15 +828,18 @@ body{
       text-align: left;      
     }
 
-    .board_window{
-      width: 100%;
-      height: 100%;
-      overflow: hidden;
+    .board_window {
+      position: fixed;
+      top: 80px;
       display: flex;
-      flex-direction: column;
-      justify-content: center;
+      padding: 80px 0;
+      justify-content: flex-start;
       align-items: center;
-    }
+      bottom: 80px;
+      overflow-y: auto;
+      left: 0;
+      right: 0;
+  }
 
     .frame-71{
       width: 396px;
@@ -877,39 +879,45 @@ body{
     }
   }
 
-  @media (max-width: 320px) {
+  @media (max-width: 420px) {
+
+    .urgency-summary-v1:hover {
+      width: 300px;
+    }
+    .frame-71 {
+      width: 300px;
+    }
+
+    .frame-40 {
+      width: 300px;
+    }
 
     .board_window {
-      overflow-y: auto;
-      height: 403px;
       display: flex;
       justify-content: flex-start;
     }
 
     .frame-65 {
       width: 300px;
-      margin-left: 43.6px;
     }
 
     .urgency-summary-v1 {
       width: 300px;
-      margin-left: 43.6px;
     }
 
     .frame-64 {
       width: 300px;
-      margin-left: 43.6px;
     }
 
     .square-button-v1 {
       width: 20px;
     }
-
-    .frame-61 {
-
+    .frame-68 span {
+      white-space: wrap;
     }
 
-    .frame-40 {
-
+    .frame-68{
+      width: 135px;
     }
+
   }
